WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-10-30


Version 0.2.2 (under dev!):
   * fixed crash with Ctrl-T (transpose) and one char on line (bug #18153)
   * added "modifier" in plugins API
   * improved /plugin command
   * fixed bug on ignore with "mode" IRC command (bug #18058)
   * fixed crash when loading ruby script if file does not exist, with
     Ruby >= 1.9 only (bug #18064)
   * added date in plugin function get_buffer_data()
   * fixed some portability bugs (patch #5271)
   * fixed iconv detection for BSD (patch #5456)
   * fixed typo in configure.in (bash specific test) (patch #5450)
   * mode changes with /op, /deop, /voice, /devoice, /halfop, /dehalfop are
     now sent in one mode command to server (task #5968)
   * added more values for config boolean values: y/true/t/1 and n/false/f/0
   * fixed bug with /alias and arguments (like $1), now text after
     argument(s) is used (bug #17944)
   * fixed minor display bug with special chars on some arch like PPC

Version 0.2.1 (2006-10-01):
   * fixed crash for DCC receiver when resuming a file (bug #17885)
   * fixed DCC error for sender when receiver cancels DCC (bug #17838)
   * fixed random crash with /upgrade command (error when loading buffers)
   * fixed buffer search by server/channel: now if only channel is specified,
     a channel of another server can be found
   * fixed highlight for DCC, invite and notice: when a window is displaying
     buffer, there's no highlight
   * command "/away -all" now allowed when not connected to current server
   * new signals handled: SIGTERM and SIGHUP (received when terminal is closed):
     clean WeeChat quit (send quit to irc servers then quit WeeChat)
   * added some new default key bindings for existing keys (for some OS)
   * command /key now ok with one arg (key name): display key if found
   * fixed bug with CTCP VERSION sent on channels (bug #17547)